# kiss_rng

./: CMakeLists.txt  Config.cmake.in  LICENSE  Makefile  README.md  example.cpp
cmake/: install.cmake
example/: CMakeLists.txt  example.cpp
include/kiss/: distributions.hpp  hashers.hpp  kiss.hpp
